--- a/theory.tex
+++ b/theory.tex
@@ -927,7 +927,7 @@ We will show in the Results section on a particular example that some numerical 
 
 %}}}
 \paragraph{Brillouin zones in the reciprocal space} %{{{ 
-The periodically repeated interval of $K\in\langle-\pi/a, \pi/a\rangle$ can be viewed as the unit cell in the space of wave vectors, i.e. in the \textit{reciprocal space}. Such a unit cell is then denoted as a \textit{Brillouin zone}. While in one-dimensional case the definition of higher Brillouin zones trivially consists in separating the axis into equal intervals, in two or three dimensions the shapes of higher Brillouin zones get much more complex, and unlike to each other.  As a general rule, the $m$-th Brillouin zone is the set of all points for which the center point $K=0$ is the $m$-th closest point in the lattice. %% TODO $K$. 
+The periodically repeated interval of $K\in\langle-\pi/a, \pi/a\rangle$ can be viewed as the unit cell in the space of wave vectors, i.e. in the \textit{reciprocal space}. Such a unit cell is then denoted as a \textit{Brillouin zone}. While in one-dimensional case the definition of higher Brillouin zones trivially consists in dividing the axis into equal intervals, in two or three dimensions the shapes of higher Brillouin zones get much more complex, and are unlike to each other.  As a general rule, the $m$-th Brillouin zone is the set of all points for which the center point $K=0$ is the $m$-th closest point in the lattice. All Brillouin zones 
 
 % Beam propagation in periodic planar waveguides \cite{zengerle1987light}
 
