--- a/intro.tex
+++ b/intro.tex
@@ -1,6 +1,6 @@
 \section{Introduction} % TODO
 
-\paragraph{Electromagnetism of complex structures} %{{{
+\subsection{Electromagnetism of complex structures} %{{{
 The behaviour of electromagnetic waves in periodic media has attracted the human attention for ages, long before anybody perceived that light is an \textit{electromagnetic wave} or that it is the \textit{periodicity} that is responsible for the brilliant and irreproducible colours of opal gemstones and many living creatures, such as various beetles, butterflies, peacocks etc. 
 The scientific community started to study the underlying phenomena in the late 19th century when the X-ray scattering was observed on (periodic) crystal lattices and also when the high optical reflection from periodic layers of entirely transparent materials was predicted. % TODO ref
 %The technological and scientific boom of the 20th century contributed with many new theoretical approaches, numerical methods and types of periodic structures to the newly born field of \textit{photonics}. With the advent of the 21th century, great progress was also made in the research of \textit{metamaterials}, a specific subset of periodic structures which will be discussed in greater detail in this work. 
@@ -8,7 +8,7 @@ The scientific community started to study the underlying phenomena in the late 1
 The key concept in photonic crystal or metamaterial studies is that the electromagnetic properties are defined predominantly by the shape of the structure, while the actual materials that are used to build it can be relatively freely chosen. % This allows one to take into account the technological and economical aspects. 
 While it is unlikely that a radically new material will be invented for construction of optical elements, several new phenomena can be obtained by periodic structuring of ordinary materials. The rapid development of this field was enabled by the modern technology of microfabrication, along with the unprecedented power of computers able to predict the structure behaviour.
 
-\paragraph{Motivation for the terahertz photonics}
+\subsection{Motivation for the terahertz photonics}
 This work focuses on the terahertz (THz) spectral range, which spans roughly from 100 GHz to 10 THz. While the electrodynamic theory presented in this work is scale-invariant and can be used from microwave to optical frequencies, the selected frequency range defined the properties of materials and technological processes available. Compared to the well established optical technology (400---700 THz), the range of materials suitable for THz frequencies gives additional possibilities, such as the use of superconductors, extremely high permittivity dielectrics and tunable ferroelectrics. Additionally, the much longer wavelength of terahertz waves, e.g. 300 $\upmu$m for 1 THz in free space, also enables much easier fabrication of the structures. On the other hand, some materials commonly found in the microwave or optical applications must be avoided, as they exhibit excessively high losses in the terahertz range (such as glass, water, most plastics etc.)
 
 %\cite{lewis2014review} approximated the number of papers as an exponential, doubling every 3.2 years: D = 2**[(year-1975)/3.2]
@@ -23,7 +23,7 @@ Yet none of these approaches is optimal for the THz applications; from the elect
 % TODO THz MM review 
 
 %}}}
-\paragraph{Outline of the thesis} %{{{
+\subsection{Outline of the thesis} %{{{
 % TODO  cíle disertace
 Many different designs of metamaterials  % and photonic crystals
 were proposed in the last decades, part of them being aimed to the terahertz range. %They have been also summed by several books and reviews % TODO refs x5
@@ -33,12 +33,36 @@ were proposed in the last decades, part of them being aimed to the terahertz ran
 %		too specific, no comparison with similar structures, different frequency-spatial scalings of the same
 %		often missing  cricital discussion of excessive losses, slow response etc.
 %		missing proper electrodynamics
+
+\paragraph{Theory} %{{{
+The theoretical chapter starts with a brief review of \textit{electrodynamics of continuous media}. In its customary form without account for spatial dispersion, this topic is treated in every related textbook, so classical linear electrodynamics is introduced in a minimalistic manner. Many related topics such as nonlinearity, optical activity and gyrotropy are not discussed here, as they are not essential for the description of metamaterials in the rest of the thesis.  
+
+The local electrodynamics serves as a basis for transforming into the so-called Landau-Lifshitz (or, $EDB$) formulation of electrodynamics for spatially-dispersive media, which is elaborated more in detail. In the author's opinion, this topic does not receive due attention in most of the literature.
+
+The Bloch theorem follows along with its mathematical proof, which enables to adapt the continuum electrodynamics also for waves propagating in periodic structures. 
+The distinction of two widely recognized types of these, namely \textit{metamaterials} and \textit{photonic crystals}, is discussed from different aspects. 
+
+%}}}
+\paragraph{Results} %{{{
+
+%}}}
+\paragraph{Experimental methods} %{{{
+
+%}}}
+\paragraph{Numerical methods} %{{{
+
+%}}}
+\paragraph{Results and conclusion} %{{{
+
+%}}}
+
+\add{
 One of the aims of the dissertation are to give a comparison of these structures and to point out the profound similarities in their operation, which may not be obvious.  Some of the structures discussed were also manufactured and experimentally characterized during this PhD project. 
 
 Some attention was paid also to \todo{investigate the tunability of their properties depending on external parameters}, such as temperature, electric and magnetic fields and illumination. %, i.e. to 
 
 Last but not least, the dissertation involved the development of a reliable platform for numerical simulations of photonic structures, based on freely available code. Thorough the thesis, the results from these simulations will be verified against experimental data and analytic models.
-% Based on a firm theory of electrodynamics of periodic structures
+}
 
 %% TODO update 
 %In the following section we present a brief overview of the relevant physical theory. We review the propagation of electromagnetic waves in the free space and in simple periodic structures. We  outline the boundary which usually divides the fields of \textit{photonic crystals} and \textit{metamaterials}, trying to support the hypothesis that the theoretical approaches used for each field can be unified and used for the other field as well.
@@ -50,7 +74,7 @@ Last but not least, the dissertation involved the development of a reliable plat
 %In the last section, some general conclusions and prospects are drawn.
 
 %}}}
-\paragraph{The conventions used}%{{{
+\subsection{The conventions used}%{{{
 Thorough the thesis, we use a single or double apostrophe ($x', x''$) to refer to the real and imaginary part of a complex numberl ($x$). Italic symbols (e.g. $k$) represent the magnitudes of vectors, which are denoted by respective bold symbols (e.g. $k = |\kk|$). Components of vectors are denoted by small indices, such as $k_x, k_y, k_z$.
 
 The explicit time, space or frequency dependence of quantities are omitted when it does not allow confusion. So for electric field we write $\E$ instead of $\E(\rr,t)$.
